# RlArcProject

./: .gitignore  Dockerfile  README.md  dataset_ids.txt  dev.docker-compose.yml  env_template.env  makefile.sh  pyproject.toml  test_checkpoint.ptc
devops/: .dockerignore  Dockerfile  dev.docker-compose.yml  main.py
rl_arc_world/arc/: arc_dataset.py
rl_arc_world/enviroments/: ArcWorld.py  arc_single_grid.py
rlarcworld/: arc_dataset.py  train_agent.ipynb  utils.py
rlarcworld/agent/: actor.py  critic.py  nn_modules.py
rlarcworld/agent/models/: resnet_module.py
rlarcworld/algorithms/: d4pg.py
rlarcworld/enviroments/: arc_batch_grid_env.py  arc_grid_env.py  arc_single_grid.py
rlarcworld/enviroments/wrappers/: rewards.py
rlarcworld/jobs/: config.yaml  train.py
rlarcworld/policies/: d4pg_policy.py
rlarcworld/runs/Feb14_08-52-51_andres-rogstrixg713pig713pi/: events.out.tfevents.1739541171.andres-rogstrixg713pig713pi.32068.0
tests/: test_algorithms.py  test_arc_dataset.py  test_arc_enviroment.py  test_networks.py  test_utils.py
tests/test_data/: test1.json  test_2.json
